(style) change navbar color to default and fix alignment of button

--- a/public/static/main.css
+++ b/public/static/main.css
@@ -153,11 +153,9 @@ p {
 }
 
 .navBar{
- background-color: #67809F;
  position: fixed;
  top: 0;
  left: 0;
- z-index: 9999;
  width: 100%;
  height: 50px;
 }
